# fuzzy-core

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
reference/rust/: Cargo.toml  README_PYPI.md  pyproject.toml
reference/rust/python/tests/: test_similarity.py
reference/rust/src/: levenshtein.rs  lib.rs  normalize.rs  python.rs  score.rs
spec/: fuzzy-string-v0.1.md
test-vectors/: generic.json
